<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CrearMedicamentosActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txt_gramos"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:hint="@string/txt_gramos"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.494" app:layout_constraintVertical_bias="0.158"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_nombre_medicamento"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/txt_nombre_medicamento"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txt_gramos"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_composicion" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/txt_composicion"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txt_nombre_medicamento"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txt_usado" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/txt_uso" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_composicion"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txt_caducidad"
            android:hint="@string/txt_caducidad" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txt_usado" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/txt_numero_pastilla" android:hint="@string/txt_numero_pastillas"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txt_caducidad"
            android:layout_marginStart="28dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.411"/>
    <TextView
            android:layout_width="51dp"
            android:layout_height="37dp"
            android:id="@+id/txt_id_paciente" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.623"
            app:layout_constraintTop_toBottomOf="@+id/txt_numero_pastilla" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/btn_guardar_paciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_guardar_medicamento" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/txt_id_paciente"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:text="@string/txt_id"
            app:layout_constraintTop_toBottomOf="@+id/txt_numero_pastilla" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/txt_id_paciente"
            android:layout_marginEnd="8dp"/>
</android.support.constraint.ConstraintLayout>